# web-hw-7

./: alembic.ini  config.ini  contacts.db  hw.db  main.py  my_select.py  pyproject.toml  seed.py
hw/: db.py  models.py  seed.py
migration/versions/: 1099250a3d70_init.py  844faf66ef57_init.py  bdbbd794cd7f_init.py
src/: db.py  models.py  my_select.py
