[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Olha <142577158+Helga735@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
